[package]
name = "weed-playground"
version = "0.1.0"
authors = ["04l3x <al3x@al3x.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
yew = "0.19"
yew-router = "0.16.0"
css-in-rust = "0.5.0"
gloo-utils = "0.1"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

serde_json = "1.0"
wasm-logger = "0.2"
log = "0.4"

[dependencies.weed-lexer]
git = "https://gitlab.com/0al3x/weed-lang.git"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.pulldown-cmark]
version = "0.9" 
default-features = false

[dependencies.web-sys]
version = "0.3"
features = [
  'EventTarget',
  'Document',
  'Window',
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "HtmlTextAreaElement",
  "HtmlElement",
  "Event"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
